--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
+}
+
+ul{
+    list-style: none;
 }
 
 .wrap{
@@ -9,15 +16,62 @@
     background-color:#EEE;
     width:100%;
     height:100vh;
+    align-items: center;
 }
 
 .layout{
+    max-width: 640px;
     width:100%;
     display:flex;
     justify-content: center;
+    align-items: center;
+    flex-direction:column;
+}
+
+.layout article{
+    width:100%;
 }
 
 .layout article{
     background-color:#FFF;
     padding:30px;
+}
+
+h1{
+    font-family: 'Pacifico', cursive;
+    font-size:60px;
+    margin-bottom:30px;
+}
+
+.frm_layout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:row;
+}
+
+.ip_basic{
+    width:calc(100% - 110px);
+    height:50px;
+    padding:0 8px;
+    border:1px solid #68d5ff;
+    border-radius: 5px;
+}
+
+.btn_basic{
+    width:100px;
+    background-color: #EEE;
+    height:50px;
+    line-height: 50px;
+    border:0;
+    margin-left:10px;
+}
+
+.partList > li{
+    display: inline-block;
+    padding:6px 14px;
+    margin-top:5px;
+    margin-right:10px;
+    border-radius: 7px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
 }
